--- a/examples.css
+++ b/examples.css
@@ -342,9 +342,9 @@ input {
 	margin: 100px; 
 	font-size: 20px;
 	position: relative;   
-	text-align: center; 
-	padding-right: 200px;
-	padding-left: 200px;
+	text-align: left; 
+	padding-right: 10px;
+	padding-left: 500px;
 	padding-bottom: 0px;
 	color: rgb(49, 48, 48); 
 	}    
@@ -352,9 +352,9 @@ input {
 	margin: 100px;
 	position: relative; 
 	padding-top: 0px;
-	padding-right: 200px;
-	padding-left: 200px;
-	width: 800px;
+	padding-right: 0px;
+	padding-left: 10px;
+	width: 750px;
 	height: 600px;
 	font-family: Gill Sans, 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
 	} 
@@ -362,8 +362,8 @@ input {
 	margin: 100px;
 	position: relative; 
 	padding-top: 0px;
-	padding-right: 200px;
-	padding-left: 200px; 
+	padding-right: 0px;
+	padding-left: 10px; 
 	width: 800px;
 	height: 600px;
 	font-family: Gill Sans, 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
