--- a/examples.css
+++ b/examples.css
@@ -327,6 +327,44 @@ input {
     width: 220px;
   }
 
+/* Sunny STYLES
+* --------------------------------------- */
+.ticks {
+	font-size: 10px;
+}
+
+.track,
+.track-inset,
+.track-overlay {
+	stroke-linecap: round;
+}
+
+.track {
+	stroke: #000;
+	stroke-opacity: 0.3;
+	stroke-width: 10px;
+}
+
+.track-inset {
+	stroke: #ddd;
+	stroke-width: 8px;
+}
+
+.track-overlay {
+	pointer-events: stroke;
+	stroke-width: 50px;
+	stroke: transparent;
+	cursor: crosshair;
+}
+
+.handle {
+	fill: #fff;
+	stroke: #000;
+	stroke-opacity: 0.5;
+	stroke-width: 1.25px;
+}
+
+
 /* Elika STYLES
  * --------------------------------------- */
 
@@ -571,3 +609,6 @@ input {
 	.timeline .swiper-slide-content {
 	right: 25%; 
 	}
+
+
+	
