--- a/examples.css
+++ b/examples.css
@@ -395,7 +395,7 @@ input {
 	padding-left: 10px;
 	width: 750px;
 	height: 600px;
-	font-family: Gill Sans, 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
+	font-family: 'Lato' !important; 
 	} 
 	.chart2{
 	margin: 100px;
@@ -405,7 +405,7 @@ input {
 	padding-left: 10px; 
 	width: 800px;
 	height: 600px;
-	font-family: Gill Sans, 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
+	font-family: 'Lato';
 	} 
 	.container {
 	display: flex;
@@ -613,7 +613,7 @@ input {
 	body { 
       margin:0px; 
       padding:0;
-      font-family: Gill Sans, 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif !important; 
+      font-family: 'Lato';
       color: rgb(56, 54, 54);
       } 
       .header{
@@ -643,7 +643,7 @@ input {
       padding-left: 25px;
       width: 800px;
       height: 600px;
-      font-family: Gill Sans, 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
+      font-family: 'Lato';
       } 
       .chart2{
       margin: 100px;
@@ -653,7 +653,7 @@ input {
       padding-left: 25px; 
       width: 800px;
       height: 600px;
-      font-family: Gill Sans, 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
+      font-family: 'Lato';
       } 
       .container {
       display: flex;
