val text position changes

--- a/examples.css
+++ b/examples.css
@@ -322,8 +322,8 @@ p{
 
 input {
     position: absolute;
-    left: 850px;
-    top: 650px;
+    left: 45%;
+    top: 65%;
     width: 220px;
   }
 
